# ClaudeU

./: .gitignore  CLAUDE.md  README.md  example.ipynb  pyproject.toml
.claude/commands/: tutor.md
.claude/output-styles/: challenge-first.md  eli5-stock-indicators-tutor.md  eli5.md  git-tutor.md  minimalist.md  python-tutor.md  rubber-duck.md  socratic.md  stock-indicators-tutor.md
docs/: DEVELOPER_GUIDE.md  QUICK_START.md  README.md  TECHNICAL_ARCHITECTURE.md  TROUBLESHOOTING.md  TUTOR_COMMAND.md  USER_GUIDE.md  WHY_OUTPUT_STYLES.md  stock-indicators.md
examples/: stock-analysis.ipynb
examples/git-playground/: README.md  setup-basic.sh  setup-branching.sh  setup-undo.sh
tutor/notebooks/git/: basics.ipynb  branching.ipynb  undoing-changes.ipynb
tutor/notebooks/stock-analysis/: fundamental-ratios.ipynb  stock-screener.ipynb  technical-indicators.ipynb
tutor/notebooks/web-scraping/: html-and-beautifulsoup.ipynb
tutor/reference/git/: commands-cheatsheet.md  mental-model.md  workflows-cheatsheet.md
tutor/reference/stock-analysis/: composite-scores.md  technical-indicators.md  valuation-ratios.md
tutor/reference/web-scraping/: beautifulsoup-cheatsheet.md
