[project]
name = "python-tutor"
version = "0.2.0"
description = "AI tutoring system for Python programming and Stock Analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.1",
    # Stock analysis dependencies
    "yfinance>=0.2.36",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "ta>=0.10.2",
]

[project.optional-dependencies]
scraping = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]
