[project]
name = "claudeu"
version = "0.2.0"
description = "Build your own personalized AI university with unlimited tutors for any topic"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.1",
    # Stock analysis dependencies
    "yfinance>=0.2.36",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "ta>=0.10.2",
]

[project.optional-dependencies]
scraping = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]
